--- a/Week 1/question5.html
+++ b/Week 1/question5.html
@@ -31,7 +31,7 @@
     <input type="text" id="input1" name="input1"><br><br>
     <label for="input2">Field 2:</label>
     <input type="text" id="input2" name="input2"><br><br>
-    <button type="submit">Submit</button>
+    <button type="submit">Submidt</button>
 </form>
 </body>
 </html>
